--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -4,7 +4,7 @@
 
         <a class="navbar-brand" href="#">Dating App</a>
 
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav mr-auto" *ngIf="loggedIn">
 
             <li class="nav-item">
                 <a class="nav-link" href="#">Matches</a>
@@ -17,10 +17,22 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Messages</a>
             </li>
+
+            <li class="nav-item">
+                <a class="nav-link" (click)="logout()" href="#">Logout</a>
+            </li>
             
         </ul>
 
-        <form #loginForm="ngForm" class="form-inline mt-2 mt-md-0" 
+        <div *ngIf="loggedIn" class="dropdown">
+            <a class="dropdown-toggle text-light">Welcome User</a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item">Edit Profile</a>
+                <a class="dropdown-item" (click)="logout()">Logout</a>
+            </div>
+        </div>
+
+        <form *ngIf="!loggedIn" #loginForm="ngForm" class="form-inline mt-2 mt-md-0" 
             (ngSubmit)="login()" autocomplete="off">
 
             <input name="username" [(ngModel)]="model.username" 
