--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -4,7 +4,7 @@
 
         <a class="navbar-brand" href="#">Dating App</a>
 
-        <ul class="navbar-nav mr-auto" *ngIf="loggedIn">
+        <ul class="navbar-nav mr-auto" *ngIf="accountService.currentUser$ | async">
 
             <li class="nav-item">
                 <a class="nav-link" href="#">Matches</a>
@@ -17,14 +17,10 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Messages</a>
             </li>
-
-            <li class="nav-item">
-                <a class="nav-link" (click)="logout()" href="#">Logout</a>
-            </li>
             
         </ul>
 
-        <div *ngIf="loggedIn" class="dropdown" dropdown>
+        <div *ngIf="accountService.currentUser$ | async" class="dropdown" dropdown>
             <a class="dropdown-toggle text-light" dropdownToggle>Welcome User</a>
             <div class="dropdown-menu mt-3" *dropdownMenu>
                 <a class="dropdown-item">Edit Profile</a>
@@ -33,7 +29,7 @@
             </div>
         </div>
 
-        <form *ngIf="!loggedIn" #loginForm="ngForm" class="form-inline mt-2 mt-md-0" 
+        <form *ngIf="(accountService.currentUser$ | async) === null" #loginForm="ngForm" class="form-inline mt-2 mt-md-0" 
             (ngSubmit)="login()" autocomplete="off">
 
             <input name="username" [(ngModel)]="model.username" 
