--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -5,8 +5,8 @@
     </div>
 
     <div class="col-8">
-        <div class="alert alert-info">
-            <p><strong>Information: </strong> You have made changes. Any unsaved changes will be lost.</p>
+        <div class="alert alert-info" *ngIf="editForm.dirty">
+            <strong>Information: </strong> You have made changes. Any unsaved changes will be lost.
         </div>
     </div>
 
@@ -36,7 +36,7 @@
             </div>
 
             <div class="card-footer">
-                <button class="btn btn-success btn-block">Save Changes</button>
+                <button [disabled]="!editForm.dirty" form="editForm" class="btn btn-success btn-block">Save Changes</button>
             </div>
 
         </div>
@@ -49,7 +49,8 @@
 
             <tab heading="About {{member.knownAs}}">
 
-                <form>
+                <form #editForm="ngForm" id="editForm" (ngSubmit)="updateMember()">
+
                     <h4>Description</h4>
                     <textarea class="form-control" [(ngModel)]="member.introduction" name="introduction" rows="6"></textarea>
                     
@@ -66,6 +67,7 @@
                         <label for="country">Country: </label>
                         <input [(ngModel)]="member.country" type="text" name="country" class="form-control">
                     </div>
+
                 </form>
                 
             </tab>
