--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -33,7 +33,7 @@
             <th style="width: 20%;"></th>
         </tr>
 
-        <tr *ngFor="let message of messages"
+        <tr [hidden]="loading" *ngFor="let message of messages"
             routerLink='{{ container === "Outbox"
                 ? "/members/" + message.recipientUsername
                 : "/members/" + message.senderUsername}}' 
@@ -67,7 +67,7 @@
     </table>
 </div>
 
-<div class="d-flex justify-content-center" *ngIf="pagination">
+<div class="d-flex justify-content-center" *ngIf="pagination && !loading">
     <pagination [boundaryLinks]="true" 
                 [totalItems]="pagination.totalItems"
                 [itemsPerPage]="pagination.itemsPerPage"
